k8s/base/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 3001
      targetPort: 3001                # FIX BUG 6: El contenedor escucha en el puerto 3001, que es el puerto configurado en la aplicación, y que debe coincidir con el puerto definido en el Service para que la comunicación funcione correctamente.
      name: http
